<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_home_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.cardview.widget.CardView
                android:id="@+id/max_temp_card_view"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="5dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/dark_gray_transparent"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_temp_card_view">

                <TextView
                    android:id="@+id/max_temp_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="16dp"
                    android:text="@string/max_temp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="30dp"
                    android:layout_gravity="center|end"
                    android:src="@drawable/high_temp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/pressure_card_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="5dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/dark_gray_transparent"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/humidity_card_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/humidity_card_view"
                app:layout_constraintTop_toTopOf="@+id/humidity_card_view">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/pressure"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/pressure_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="20dp"
                    android:text="@string/pressure" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/min_temp_card_view"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="5dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/dark_gray_transparent"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/max_temp_card_view">

                <TextView
                    android:id="@+id/min_temp_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_gravity="center|start"
                    android:text="@string/min_temp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="30dp"
                    android:layout_gravity="center|end"
                    android:src="@drawable/low_temp"
                    android:contentDescription="@string/min_temp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/humidity_card_view"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/dark_gray_transparent"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toStartOf="@+id/pressure_card_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/min_temp_card_view">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/humidity"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/humidity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="20dp"
                    android:text="@string/humidity" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/main_temp_card_view"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:layout_margin="5dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/dark_gray_transparent"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/feels_like_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/feels_like"
                        app:layout_constraintEnd_toEndOf="@+id/home_fragment_temperature"
                        app:layout_constraintStart_toStartOf="@+id/home_fragment_temperature"
                        app:layout_constraintTop_toBottomOf="@+id/home_fragment_temperature" />

                    <TextView
                        android:id="@+id/home_fragment_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="0"
                        android:textSize="60sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/description_type_text_view" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.5" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:layout_constraintBottom_toTopOf="@+id/guideline2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5"
                        tools:srcCompat="@tools:sample/avatars"
                        android:contentDescription="@string/weather_icon" />

                    <TextView
                        android:id="@+id/clouds_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clouds"
                        android:textSize="34sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/description_type_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="@+id/clouds_text_view"
                        app:layout_constraintStart_toStartOf="@+id/clouds_text_view"
                        app:layout_constraintTop_toBottomOf="@+id/clouds_text_view" />

                    <ImageButton
                        android:id="@+id/reload_image_button"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="16dp"
                        android:contentDescription="@string/fetch_data"
                        android:background="@drawable/image_button_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_location_on" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/country_code_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/humidity_card_view"
                tools:text="Country_Code" />

            <TextView
                android:id="@+id/city_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/country_code_text_view"
                app:layout_constraintStart_toEndOf="@+id/country_code_text_view"
                app:layout_constraintTop_toTopOf="@+id/country_code_text_view"
                tools:text="City_Name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.core.widget.NestedScrollView>
